# rosette

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  forge-world.toml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
rosette/: __init__.py  cli.py  cli_campaign.py  config.py  forge_world.py
rosette/analysis/: __init__.py  author_network.py  cross_reference.py  evidence.py  image_forensics.py  llm_vision.py  run_analysis.py  text_forensics.py  types.py  western_blot.py
rosette/api/: app.py  routes.py
rosette/calibration/: benchmark.py
rosette/campaign/: __init__.py  dashboard.py  expander.py  hash_scanner.py  orchestrator.py  triage.py
rosette/db/: migrations.py  models.py  session.py
rosette/demo/: __init__.py  fixtures.py  runner.py
rosette/discovery/: __init__.py  crossref.py  openalex.py  pubpeer.py  retraction_watch.py  semantic_scholar.py
rosette/extraction/: __init__.py  pdf_parser.py
rosette/llm/: __init__.py  base.py  prompts.py
rosette/pipeline/: orchestrator.py
rosette/reporting/: dashboard.py  evidence_package.py  pretty.py  proof.py
scripts/: download_fixtures.py  run_demo.py
snoopy/: __init__.py  cli.py  cli_campaign.py  config.py  forge_world.py  validation.py
snoopy/analysis/: author_network.py  cross_reference.py  evidence.py  image_forensics.py  llm_vision.py  metadata_forensics.py  run_analysis.py  sprite.py  statistical.py  text_forensics.py  western_blot.py
snoopy/api/: app.py  routes.py  schemas.py
snoopy/calibration/: benchmark.py  metrics.py
snoopy/campaign/: dashboard.py  expander.py  hash_scanner.py  orchestrator.py  triage.py
snoopy/db/: migrations.py  models.py  session.py
snoopy/demo/: __init__.py  fixtures.py  runner.py
snoopy/discovery/: crossref.py  openalex.py  priority.py  pubmed.py  pubpeer.py  retraction_watch.py  unpaywall.py
snoopy/extraction/: figure_extractor.py  pdf_parser.py  stats_extractor.py  table_extractor.py
snoopy/llm/: base.py  cache.py  claude.py  prompts.py  prompts_western_blot.py
snoopy/notifications/: webhook.py
snoopy/pipeline/: __init__.py  orchestrator.py  stages.py
snoopy/reporting/: __init__.py  dashboard.py  evidence_package.py  pretty.py  proof.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_forge_world.py  test_validation.py
tests/test_analysis/: test_author_network.py  test_cross_reference.py  test_dct_forensics.py  test_evidence.py  test_frequency_analysis.py  test_grimmer.py  test_image_forensics.py  test_llm_vision.py  test_metadata_forensics.py  test_run_analysis.py  test_sprite.py  test_sprite_extended.py  test_statistical.py  test_terminal_digit.py  test_text_forensics.py  test_variance_ratio.py  test_western_blot.py
tests/test_api/: test_routes.py
tests/test_calibration/: test_benchmark.py  test_metrics.py
tests/test_campaign/: conftest.py  test_cli_dashboard.py  test_expander.py  test_hash_scanner.py  test_orchestrator.py  test_triage.py
tests/test_demo/: test_fixtures.py  test_runner.py
tests/test_discovery/: test_crossref.py  test_openalex.py  test_priority.py  (+5 more)
(+35 files in other folders)
