[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snoopy"
version = "0.1.0"
description = "LLM-powered academic integrity analyzer"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "PyMuPDF>=1.24",
    "pdfplumber>=0.11",
    "Pillow>=10.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "scipy>=1.12",
    "sqlalchemy>=2.0",
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "imagehash>=4.3",
    "rich>=13.0",
    "py7zr>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
snoopy = "snoopy.cli:main"

[tool.setuptools.packages.find]
include = ["snoopy*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require downloaded fixtures (deselect with '-m \"not integration\"')",
]
