[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snoopy"
version = "0.1.0"
description = "LLM-powered academic integrity analyzer"
requires-python = ">=3.11"
dependencies = [
    "anthropic~=0.40",
    "httpx~=0.27",
    "PyMuPDF~=1.24",
    "pdfplumber~=0.11",
    "Pillow>=12.1.1",
    "numpy~=1.26",
    "opencv-python-headless~=4.9",
    "scipy~=1.12",
    "sqlalchemy~=2.0",
    "greenlet>=3.0",
    "aiosqlite~=0.20",
    "asyncpg~=0.29",
    "click~=8.1",
    "pydantic~=2.5",
    "pydantic-settings~=2.1",
    "jinja2~=3.1",
    "defusedxml~=0.7",
    "pyyaml~=6.0",
    "imagehash~=4.3",
    "rich~=13.0",
    "Pillow-heif>=0.16",
    "fastapi~=0.115",
    "uvicorn~=0.30",
    "python-multipart~=0.0.9",
    "networkx~=3.3",
    "python-louvain~=0.16",
    "alembic~=1.13",
    "slowapi~=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=6.0",
    "ruff==0.8.0",
    "mypy>=1.10",
    "pip-tools>=7.4",
    "types-PyYAML>=6.0",
    "py7zr~=1.1",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
snoopy = "snoopy.cli:main"

[tool.setuptools.packages.find]
include = ["snoopy*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require downloaded fixtures (deselect with '-m \"not integration\"')",
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Per-package overrides for untyped third-party libraries
[[tool.mypy.overrides]]
module = [
    "fitz.*",
    "cv2.*",
    "pdfplumber.*",
    "imagehash.*",
    "community.*",
    "py7zr.*",
    "defusedxml",
    "defusedxml.*",
    "pillow_heif.*",
    "networkx",
    "networkx.*",
    "scipy",
    "scipy.*",
    "uvicorn",
    "uvicorn.*",
    "alembic",
    "alembic.*",
]
ignore_missing_imports = true
